--- a/intstudio/src/main/webapp/eucms.html
+++ b/intstudio/src/main/webapp/eucms.html
@@ -139,7 +139,7 @@ font-family:;
       </button> 
       <div class="collapse navbar-collapse navbar-collapse-toolbar pull-md-right p-0" id="met-nav-collapse"> 
        <ul class="nav navbar-nav navlist"> 
-        <li class="nav-item"> <a href="#" title="登录/注册" class="nav-link active">登录/注册</a> </li> 
+        <li class="nav-item"> <a href="loginorregist.html" title="登录/注册" class="nav-link active">登录/注册</a> </li> 
 
                 <li class="nav-item dropdown m-l-10"> <a href="#guanyuwomen/" title="关于我们" class="nav-link dropdown-toggle " data-toggle="dropdown" data-hover="dropdown" aria-haspopup="true" aria-expanded="false"> 关于我们 </a> 
                  <!--  <div class="dropdown-menu dropdown-menu-right dropdown-menu-bullet"> 
