--- a/intstudio/src/main/webapp/loginorregist.html
+++ b/intstudio/src/main/webapp/loginorregist.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html>
 
@@ -6,7 +5,6 @@
 <head>
 
 	<title>登录表单</title>
-
 	<!-- Meta-Tags -->
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta http-equiv="Content-Type" content="text/html; charset=utf-8">
@@ -48,9 +46,9 @@
 
 		<div class="login w3layouts agileits form-group" >
 			<h2>登 录</h2>
-			<form action="#" method="post" id="form"  id="form" onsubmit="return valid()">
-				<input type="text" class="form-control" id="username" name="username" onkeyup="this.value=this.value.replace(/[^\u4e00-\u9fa5a-zA-Z0-9\w]/g,'')" placeholder="用户名/手机号"  >
-				<input type="password"  class="form-control" id="pwd" name="password" placeholder="密码"  >
+			<form action="/system/users/selectByTel" method="post" id="form"  id="form" onsubmit="return valid()">
+				<input type="text" class="form-control" id="username" name="tel" onkeyup="this.value=this.value.replace(/[^\u4e00-\u9fa5a-zA-Z0-9\w]/g,'')" placeholder="用户名/手机号"  >
+				<input type="password"  class="form-control" id="password" name="password" placeholder="密码"  >
 			
 			<!-- <ul class="tick w3layouts agileits">
 				<li>
